# woody

./: Cargo.toml  README.md
crates/ecs/: Cargo.toml
crates/ecs/macros/src/: lib.rs
crates/ecs/src/: archetypes.rs  component.rs  entity.rs  lib.rs  world.rs
crates/ecs/src/query/: mod.rs  state.rs
macros/ecs/: Cargo.toml
macros/ecs/src/: lib.rs
src/: app.rs  camera.rs  ecs.rs  event.rs  graphics.rs  graphics2.rs  input.rs  lib.rs  main.rs  systems.rs
src/ecs/: archetype.rs  archetypes.rs  component.rs  entity.rs  query.rs  world.rs
src/ecs/query/: mod.rs  state.rs
src/graphics/: camera.rs  context.rs  framebuffers.rs  mesh.rs  pipeline.rs  render_pass.rs  renderer.rs  swapchain.rs  uniform.rs  vertex.rs  vulkan.rs
src/graphics/vulkan/: buffer.rs  command_buffer.rs  framebuffer.rs  image.rs  pipeline.rs  renderpass.rs  shaders.rs  swapchain.rs
src/graphics/vulkan/shaders/: object.rs
src/graphics2/: renderer.rs  vulkan.rs
src/graphics2/vulkan/: command_buffer.rs  device.rs  framebuffer.rs  image.rs  instance.rs  renderpass.rs  swapchain.rs  sync.rs
src/input/: keyboard.rs
src/shaders/: shader.frag  shader.vert
src/shaders/object/: shader.frag  shader.vert
src/shaders/triangle/: shader.frag  shader.vert
