[package]
name = "woody"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs_macros = { path = "macros/ecs" }
winit = "0.28.6"
thiserror = "1.0.44"
vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "master" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano", branch = "master" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", branch = "master" }
bytemuck = "1.13.1"
lazy_static = "1.4.0"
ahash = "0.8.3"
glam = "0.24.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"

[build-dependencies]
shaderc = "0.8.2"
