[package]
name = "woody"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs_macros = { path = "macros/ecs" }
winit = "0.28.6"
thiserror = "1.0.44"
vulkano = { git = "https://github.com/vulkano-rs/vulkano", rev = "1f99160" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano", rev = "1f99160" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", rev = "1f99160" }
bytemuck = "1.13.1"
lazy_static = "1.4.0"
ahash = "0.8.3"
glam = { version = "0.24.1", features = ["bytemuck"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
rayon = "1.8.0"
dashmap = { version = "5.5.3", features = ["rayon"] }
dhat = "0.3.2"
paste = "1.0.14"
rustc-hash = { version = "1.1.0", features = ["std"] }

[build-dependencies]
shaderc = "0.8.2"
