[package]
name = "woody"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs_macros = { path = "macros/ecs" }
winit = { version = "0.29.4", features = ["rwh_05"] }
thiserror = "1.0.44"
vulkano = { git = "https://github.com/vulkano-rs/vulkano", rev = "1f99160" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", rev = "1f99160" }
bytemuck = "1.13.1"
lazy_static = "1.4.0"
ahash = "0.8.3"
glam = { version = "0.24.1", features = ["bytemuck"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
rayon = "1.8.0"
dashmap = { version = "5.5.3", features = ["rayon"] }
dhat = "0.3.2"
paste = "1.0.14"
rustc-hash = { version = "1.1.0", features = ["std"] }
raw-window-handle = "0.5"
smallvec = "1.11.2"
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
itertools = "0.12.1"
bitflags = "2.4.2"

[features]
default = []
graphics2 = []

[build-dependencies]
shaderc = "0.8.2"
